# quiz_app_rust

./: Cargo.toml  detail.txt  quiz_file.json
src/: main.rs
